--- a/less/forum.less
+++ b/less/forum.less
@@ -1,9 +1,11 @@
 .Post-signature {
     margin-top: 15px;
-    padding-top: 10px;
-    border-top: 1px dashed var(--muted-color); // 使用 Flarum 变量，适配深色模式
-    font-size: 0.85em;
+    padding-top: 15px;
+    border-top: 1px dashed #e8ecf3; // 使用 Flarum 变量，适配深色模式
+    font-size: 0.95em;
     color: var(--muted-color);
-    max-height: 5em;
+    max-height: 6em;
     overflow: hidden;
+    white-space: pre-line;
+    line-height: 1.6;
 }
